Make new branch

--- a/ExcelDivider/properties/excel.properties.template
+++ b/ExcelDivider/properties/excel.properties.template
@@ -67,3 +67,5 @@ column.index.commentMode.commentStart=0
 #format.read.comment=not,id,not,not,author,date,not
 #Comment text always last
 format.read.comment=id
+
+#InDevelop
