--- a/ExcelDivider/build.gradle
+++ b/ExcelDivider/build.gradle
@@ -23,7 +23,7 @@ apply plugin: 'kotlin-spring'
 sourceSets {
     main {
         java {
-            srcDirs = ['src/main/java', 'src//main/kt']
+            srcDirs = ['src//main/kt']
         }
     }
 }
