Add methods for bool and int into messageWorker. Add new class that build comments(in todo).

--- a/ExcelDivider/build.gradle
+++ b/ExcelDivider/build.gradle
@@ -23,7 +23,12 @@ apply plugin: 'kotlin-spring'
 sourceSets {
     main {
         java {
-            srcDirs = ['src//main/kt']
+            srcDirs = ['src/main/kt']
+        }
+    }
+    test {
+        java {
+            srcDirs = ['src/test/kt']
         }
     }
 }
