--- a/ExcelDivider/build.gradle
+++ b/ExcelDivider/build.gradle
@@ -1,37 +1,22 @@
 buildscript {
     ext {
-        ktVersion = "1.3.10"
+        ktVersion = "1.3.11"
     }
     repositories {
         mavenCentral()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.3.RELEASE")
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$ktVersion"
-        classpath "org.jetbrains.kotlin:kotlin-allopen:$ktVersion"
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$ktVersion")
+        classpath("org.jetbrains.kotlin:kotlin-allopen:$ktVersion")
     }
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-spring'
-
-sourceSets {
-    main {
-        java {
-            srcDirs = ['src/main/kt']
-        }
-    }
-    test {
-        java {
-            srcDirs = ['src/test/kt']
-        }
-    }
-}
 
 double javaVersion = 1.8
 
