--- a/ExcelDivider/build.gradle
+++ b/ExcelDivider/build.gradle
@@ -1,6 +1,11 @@
 buildscript {
     ext {
         ktVersion = "1.3.11"
+        hibernateVersion = "5.2.15.Final"
+        h2Version = "1.4.197"
+        springVersion = "5.1.3.RELEASE"
+        springBootVersion = "2.1.1.RELEASE"
+        poiVersion = "3.9"
     }
     repositories {
         mavenCentral()
@@ -36,31 +41,31 @@ jar {
 }
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter"){
-        exclude group: 'org.springframework.boot', module:'spring-boot-starter-logging'
+    compile("org.springframework.boot:spring-boot-starter:$springBootVersion") {
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
     }
-    compile 'org.springframework.boot:spring-boot-starter-log4j2'
+    compile "org.springframework.boot:spring-boot-starter-log4j2"
 
-    compile 'org.apache.poi:poi:3.9'
-    compile 'org.apache.poi:poi-ooxml:3.9'
+    compile "org.apache.poi:poi:$poiVersion"
+    compile "org.apache.poi:poi-ooxml:$poiVersion"
 
-    compile 'org.springframework.data:spring-data-jpa:2.0.8.RELEASE'
-    compile 'org.springframework:spring-context:5.0.7.RELEASE'
-    compile 'org.springframework:spring-context-support:5.0.7.RELEASE'
-    compile 'org.springframework:spring-beans:5.0.7.RELEASE'
+    compile "org.springframework.data:spring-data-jpa:$springBootVersion"
+    compile "org.springframework:spring-context:$springVersion"
+    compile "org.springframework:spring-context-support:$springVersion"
+    compile "org.springframework:spring-beans:$springVersion"
 
-    compile 'org.slf4j:slf4j-log4j12:1.7.25'
+    compile "org.slf4j:slf4j-log4j12:1.7.25"
 
-    compile 'org.springframework:spring-tx:5.0.7.RELEASE'
-    compile 'org.springframework:spring-orm:5.0.7.RELEASE'
+    compile "org.springframework:spring-tx:$springVersion"
+    compile "org.springframework:spring-orm:$springVersion"
 
-    compile 'com.h2database:h2:1.4.197'
-    compile 'org.hibernate:hibernate-entitymanager:5.2.15.Final'
-    compile 'org.hibernate:hibernate-core:5.2.15.Final'
+    compile "com.h2database:h2:$h2Version"
+    compile "org.hibernate:hibernate-entitymanager:$hibernateVersion"
+    compile "org.hibernate:hibernate-core:$hibernateVersion"
 
-    testCompile group: 'org.jetbrains.kotlin', name: 'kotlin-test-junit', version: "$ktVersion"
+    testCompile group: 'org.jetbrains.kotlin', name: 'kotlin-test-junit', version: ktVersion
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$ktVersion"
     compile "org.jetbrains.kotlin:kotlin-reflect:$ktVersion"
 }
 
